@@ -4,6 +4,7 @@ Changes for Venice, 0.722 beta ??/??/????
 * Improve performance of Quote Import from File
 
 * Fix Artificial Neural Network functionality
+  (Updated manual, added input check)
 * Fix Bug #1617089 Average Cost not included in average cost of share
 * Change table state save/restore to avoid saving the entire table contents 
 
